--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@fullcalendar/vue3": "^6.1.8",
     "@popperjs/core": "^2.11.8",
+    "@sweetalert2/theme-dark": "^5.0.16",
     "@vee-validate/i18n": "^4.10.7",
     "@vee-validate/rules": "^4.10.7",
     "aos": "^2.3.4",
@@ -31,6 +32,7 @@
     "gsap": "^3.12.2",
     "moment": "^2.29.4",
     "pinia": "^2.1.3",
+    "sweetalert2": "^11.10.3",
     "swiper": "^10.0.4",
     "tippy.js": "^6.3.7",
     "vee-validate": "^4.12.4",
@@ -38,8 +40,7 @@
     "vue-axios": "^3.5.2",
     "vue-bootstrap-icons": "^0.2.4",
     "vue-flatpickr-component": "^11.0.3",
-    "vue-router": "^4.2.2",
-    "sweetalert2": "^11.10.3"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
